--- a/metadata.yaml
+++ b/metadata.yaml
@@ -35,6 +35,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Short stories'
+- GITenberg
 title: 'Sac-Au-Dos
 
   1907'
